test/errors/parsing/anotherModuleForTesting.chpl
// I don't do anything, I just exist to make sure the compiler doesn't mark
// certain test files as 'main modules' because they're the only file in the
// compilation command.
